sandbox/output
StringCalculator.java:8: error: cannot find symbol
        if(numbers.contain("-1")){
                  ^
  symbol:   method contain(String)
  location: variable numbers of type String
1 error
